--- a/.github/workflows/github-reportPortal.yml
+++ b/.github/workflows/github-reportPortal.yml
@@ -2,6 +2,7 @@ name: GitHub Actions - Report Portal
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 jobs:
+  Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     env:
       USERNAME: AnahitRP
