CI integration update

--- a/.github/workflows/github-reportPortal.yml
+++ b/.github/workflows/github-reportPortal.yml
@@ -26,6 +26,4 @@ jobs:
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: npx playwright test
-      - name: Generate Test Results
-        run: allure generate allure-results -o allure-report --clean
+        run: npx playwright test && allure generate allure-results -o allure-report --clean
