--- a/.github/workflows/github-reportPortal.yml
+++ b/.github/workflows/github-reportPortal.yml
@@ -5,8 +5,8 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     env:
-      USERNAME: ${{ secrets.USERNAME.USERNAME }}
-      PASSWORD: ${{ secrets.USERNAME.PASSWORD }}
+      USERNAME: ${{ vars.USERNAME.USERNAME }}
+      PASSWORD: ${{ vars.USERNAME.PASSWORD }}
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
