--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test:generateReport": "npx playwright test && npm run allure:report",
     "test:headed": "npx playwright test --headed",
     "allure:results": "npx allure serve allure-results",
-    "allure:report": "allure generate allure-results -o allure-report --clean",
+    "allure:report": "npx allure generate allure-results -o allure-report --clean",
     "prettier": "prettier --write './**/**/**/*.js'",
     "lint": "eslint ."
   },
