--- a/.github/workflows/github-reportPortal.yml
+++ b/.github/workflows/github-reportPortal.yml
@@ -17,10 +17,10 @@ jobs:
         run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
-      - name: Save allure-results
-        run: npx allure serve allure-results
       - name: Run Playwright tests
-        run: npx playwright test && npm run allure:report
+        run: npx playwright test
+      - name: Save allure-results
+        run: npx allure serve allure-results && npm run allure:report
       - uses: actions/upload-artifact@v4
         if: always()
         with:
