--- a/.github/workflows/github-reportPortal.yml
+++ b/.github/workflows/github-reportPortal.yml
@@ -19,8 +19,7 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx playwright test
-      - name: Save allure-results
-        run: npx allure serve allure-results && npm run allure:report
+      - uses: npx allure serve allure-results && npm run allure:report
       - uses: actions/upload-artifact@v4
         if: always()
         with:
