--- a/.github/workflows/github-reportPortal.yml
+++ b/.github/workflows/github-reportPortal.yml
@@ -19,10 +19,9 @@ jobs:
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx playwright test
-      - uses: npx allure serve allure-results && npm run allure:report
       - uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: allure-report
-          path: allure-report/
+          name: playwright-report
+          path: playwright-report/
           retention-days: 30
