--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "lint-staged": {
     "*.js": [
       "prettier --write",
-      "eslint --fix"
+      "eslint --fix ."
     ],
     "*.json": [
       "prettier --write"
