--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "test": "npx jasmine src/tests/spec/login.spec.js --parallel=2",
     "test:generateReport": "npx playwright test && npm run allure:report",
     "test:headed": "npx playwright test --headed",
     "allure:results": "npx allure serve allure-results",
@@ -15,18 +17,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.42.1",
     "@types/node": "^20.11.28",
     "allure-commandline": "^2.27.0",
     "allure-playwright": "^2.14.1",
+    "dotenv": "^16.1.4",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
-    "dotenv": "^16.1.4"
+    "jasmine": "^5.1.0"
   },
   "dependencies": {
+    "playwright": "^1.42.1",
     "prettier": "^3.2.5",
     "winston": "^3.12.0"
   },
