--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test:generateReport": "npx playwright test && npm run allure:report",
     "test:headed": "npx playwright test --headed",
+    "test:apiAxios": "npx playwright test src/tests/API/launches.spec.js",
+    "test:apiPlaywright": "npx playwright test src/tests/API/launchesPlaywright.spec.js",
     "allure:results": "npx allure serve allure-results",
     "allure:report": "npx allure generate allure-results -o allure-report --clean",
     "prettier": "prettier --write './**/**/**/*.js'",
@@ -19,14 +21,15 @@
     "@types/node": "^20.11.28",
     "allure-commandline": "^2.27.0",
     "allure-playwright": "^2.14.1",
+    "dotenv": "^16.1.4",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "dotenv": "^16.1.4"
+    "eslint-plugin-promise": "^6.1.1"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "prettier": "^3.2.5",
     "winston": "^3.12.0"
   },
