--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@types/node": "^20.11.28",
     "allure-commandline": "^2.27.0",
     "allure-playwright": "^2.14.1",
+    "cypress": "^13.9.0",
+    "dotenv": "^16.1.4",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "dotenv": "^16.1.4"
+    "eslint-plugin-promise": "^6.1.1"
   },
   "dependencies": {
     "prettier": "^3.2.5",
