--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test:generateReport": "npx playwright test && npm run allure:report",
     "test:headed": "npx playwright test --headed",
+    "test:cypress": "cypress run --browser chrome --headed",
     "allure:results": "npx allure serve allure-results",
     "allure:report": "npx allure generate allure-results -o allure-report --clean",
     "prettier": "prettier --write './**/**/**/*.js'",
@@ -20,14 +21,17 @@
     "allure-commandline": "^2.27.0",
     "allure-playwright": "^2.14.1",
     "cypress": "^13.9.0",
+    "cypress-real-events": "^1.12.0",
     "dotenv": "^16.1.4",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1"
+    "eslint-plugin-promise": "^6.1.1",
+    "mochawesome": "^7.1.3"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "prettier": "^3.2.5",
     "winston": "^3.12.0"
   },
