--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "allure:results": "npx allure serve allure-results",
     "allure:report": "npx allure generate allure-results -o allure-report --clean",
     "prettier": "prettier --write './**/**/**/*.js'",
-    "lint": "eslint ."
+    "lint": "eslint"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "dotenv": "^16.1.4",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-cypress": "^3.2.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
