--- a/.eslintrc
+++ b/.eslintrc
@@ -4,15 +4,19 @@
   "env": {
     "browser": true,
     "es6": true,
-    "node": true
+    "node": true,
+    "mocha": true,
+    "cypress/globals": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended","plugin:cypress/recommended"],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
 
-
+  "plugins": [
+    "cypress"
+  ],
   "rules": {
     "semi": ["warn", "always"],
     "quotes": ["warn", "single"]
